--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="detail_title_padding_end">40dp</dimen>
     <dimen name="detail_card_list_padding_top">24dp</dimen>
+    <dimen name="detail_card_outer_padding_horizontal">24dp</dimen>
     <dimen name="detail_topbar_padding_bottom">24dp</dimen>
     <dimen name="detail_topbar_back_button_padding_horizontal">24dp</dimen>
 </resources>
